Chapter 2/Exercise 2.7/manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ping-db
spec:
  serviceName: ping-db-svc
  replicas: 1
  selector:
    matchLabels:
      app: ping-db
  template:
    metadata:
      labels:
        app: ping-db
    spec:
      containers:
        - name: postgres-db
          image: postgres:latest
          ports:
            - name: db
              containerPort: 5432
          volumeMounts:
            - name: ping-volume
              mountPath: /var/lib/postgresql
  volumeClaimTemplates:
    - metadata:
        name: ping-volume
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
