Chapter 2/Exercise 2.7/manifests/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-db-svc
spec:
  type: ClusterIP
  selector:
    app: ping-db
  ports:
    - port: 3002
      targetPort: 5432
